add consumer txn support